--- a/src/pages/vendas/vendas.scss
+++ b/src/pages/vendas/vendas.scss
@@ -1,3 +1,78 @@
 page-vendas {
+    .small-box {
+        border-radius: 5px;
+        position: relative;
+        display: block;
+        margin-bottom: 20px;
+        box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+        margin-left: 5px;
+        margin-right: 10px;
+    }
 
+    .bg-green {
+        background-color: green;
+    }
+
+    .bg-blue {
+        background-color: blue;
+    }
+
+    .bg-yellow {
+        background-color: yellow;
+    }
+
+    .bg-red {
+        background-color: red;
+    }
+    
+    .small-box > .inner {
+        padding: 10px;
+    }
+
+    .small-box .icon {
+        -webkit-transition: all 0.3s linear;
+        -o-transition: all 0.3s linear;
+        transition: all 0.3s linear;
+        position: absolute;
+        top: -10px;
+        right: 10px;
+        z-index: 0;
+        font-size: 65px;
+        color: rgba(255, 255, 255, 0.70);
+        margin-top: 10px;
+    }
+
+    .small-box p, span > small {
+        display: block;
+        color: #f9f9f9;
+        font-size: 13px;
+        margin-top: 5px;
+    }
+
+    .small-box .small-box-text {
+        color: #ffffff;
+        font-weight: bold;
+    }
+
+    ion-card {
+        position: relative;
+        text-align: center;
+      }
+    
+      .card-title {
+        position: absolute;
+        top: 36%;
+        font-size: 2.0em;
+        width: 100%;
+        font-weight: bold;
+        color: #fff;
+      }
+    
+      .card-subtitle {
+        font-size: 1.0em;
+        position: absolute;
+        top: 52%;
+        width: 100%;
+        color: #fff;
+      }
 }
