--- a/src/pages/dados/dados.scss
+++ b/src/pages/dados/dados.scss
@@ -1,3 +1,52 @@
 page-dados {
 
+    .subsection-content{
+        margin-top: 20px;
+        display: block;
+        flex: row;
+        flex:1;
+    }
+
+    ion-content{
+        margin-top: 20px;
+        margin-left: 15px;
+    }
+
+    .main-content{
+        display: block;
+        flex: row;
+        flex:1;
+    }
+
+    .box-title {
+        display: inline-block;
+        font-size: 13px;
+        margin: 0;
+        line-height: 1;
+    }
+
+    .subtitle{
+        font-size: 10px;
+    }
+
+    .main-chart{
+        height: 10px;
+        display: flex;
+        flex: row;
+        flex:1;
+    }
+
+    .mini-chart{
+        display: block;
+    }
+
+    .legend-grey{
+        color: #455A64;
+    }
+
+    .row{
+        display: flex;
+        flex-direction: row;
+        flex: 1;
+    }
 }
