--- a/src/pages/dados/dados.scss
+++ b/src/pages/dados/dados.scss
@@ -7,7 +7,7 @@ page-dados {
         flex:1;
     }
 
-    ion-content{
+    .main-content, .subsection-content{
         margin-top: 20px;
         margin-left: 15px;
     }
