Criado os providers, alterado as cores da aba de vendas, dashboard e vendas ja consumindo dados da api

--- a/src/pages/modal/modal.scss
+++ b/src/pages/modal/modal.scss
@@ -1,5 +1,9 @@
 page-modal {
     .main-content{
-        margin-top: 40px;
+        margin-top: 50px;
+    }
+
+    .toolbar-header{
+        margin-top: 30px;
     }
 }
