--- a/src/pages/vendas/vendas.scss
+++ b/src/pages/vendas/vendas.scss
@@ -11,19 +11,19 @@ page-vendas {
     }
 
     .bg-green {
-        background-color: green;
+        background-color: #2eb82e;
     }
 
     .bg-blue {
-        background-color: blue;
+        background-color: #0066ff;
     }
 
     .bg-yellow {
-        background-color: yellow;
+        background-color: #ffc34d;
     }
 
     .bg-red {
-        background-color: red;
+        background-color: #ff5050;
     }
     
     .small-box > .inner {
@@ -54,26 +54,4 @@ page-vendas {
         color: #ffffff;
         font-weight: bold;
     }
-
-    ion-card {
-        position: relative;
-        text-align: center;
-      }
-    
-      .card-title {
-        position: absolute;
-        top: 36%;
-        font-size: 2.0em;
-        width: 100%;
-        font-weight: bold;
-        color: #fff;
-      }
-    
-      .card-subtitle {
-        font-size: 1.0em;
-        position: absolute;
-        top: 52%;
-        width: 100%;
-        color: #fff;
-      }
 }
