--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,3 +1,19 @@
 page-dashboard {
 
+    .box-title {
+        display: inline-block;
+        font-size: 13px;
+        margin: 0;
+        line-height: 1;
+    }
+
+    .legend-grey{
+        color: #455A64;
+    }
+    
+    .subtitle{
+        font-size: 10px;
+    }
+
+
 }
