--- a/src/pages/modal/modal.scss
+++ b/src/pages/modal/modal.scss
@@ -3,7 +3,13 @@ page-modal {
         margin-top: 50px;
     }
 
-    .toolbar-header{
-        margin-top: 30px;
+    .modal-chart-header{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+        border-bottom: 1px solid #e9ecef;
+        border-top-left-radius: 0.3rem;
+        border-top-right-radius: 0.3rem
     }
 }
